--- a/ansible/build_image.yml
+++ b/ansible/build_image.yml
@@ -1,6 +1,5 @@
 ---
-# Play 1: Gather SSH key from the user running the playbook
-- name: Gather local user SSH key
+- name: Generate local user SSH key
   hosts: "{{ target_host | default('localhost') }}"
   become: false
   vars_files:
@@ -24,17 +23,7 @@
         state: present
         force: false
 
-    - name: Read SSH public key
-      ansible.builtin.slurp:
-        src: "{{ real_user_dir }}/.ssh/id_ed25519.pub"
-      register: ssh_public_key_slurp
-
-    - name: Set SSH public key fact
-      ansible.builtin.set_fact:
-        ssh_public_key: "{{ ssh_public_key_slurp['content'] | b64decode }}"
-
-# Play 2: Prepare the chroot environment on the control node
-- name: Prepare golden image chroot environment
+- name: Build golden_image chroot base image
   hosts: "{{ target_host | default('localhost') }}"
   become: true
   vars_files:
@@ -56,17 +45,6 @@
           <username> ALL=(ALL) NOPASSWD: ALL
           (replace <username> with your actual username)
       when: sudo_check.rc != 0
-
-    - name: Gather NFS service facts
-      ansible.builtin.service_facts:
-
-    - name: Stop the NFS server
-      ansible.builtin.service:
-        name: nfs-kernel-server
-        state: stopped
-      when: >
-        'nfs-kernel-server.service' in ansible_facts.services and
-        ansible_facts.services['nfs-kernel-server.service'].state == 'running'
 
     - name: Ensure chroot filesystems are unmounted
       ansible.builtin.include_role:
@@ -98,81 +76,33 @@
         state: present
         update_cache: true
 
-    - name: Create NFS root directory
+    - name: Create golden image build directory
       ansible.builtin.file:
-        path: /srv/nfs/ubuntu_golden
+        path: "{{ golden_image_build_dir }}"
         state: directory
         mode: "0755"
 
     - name: Run debootstrap to create Ubuntu 24.04 filesystem
-      ansible.builtin.command: debootstrap --arch=amd64 noble /srv/nfs/ubuntu_golden
+      ansible.builtin.command: "debootstrap --arch=amd64 noble {{ golden_image_build_dir }}"
       args:
-        creates: /srv/nfs/ubuntu_golden/etc/os-release
+        creates: "{{ golden_image_build_dir }}/etc/os-release"
 
     - name: Copy host's resolv.conf for network access in chroot
       ansible.builtin.copy:
         src: /etc/resolv.conf
-        dest: /srv/nfs/ubuntu_golden/etc/resolv.conf
+        dest: "{{ golden_image_build_dir }}/etc/resolv.conf"
         remote_src: true
         mode: "0644"
 
     - name: Mount pseudo-filesystems for chroot
       ansible.posix.mount:
-        path: "/srv/nfs/ubuntu_golden/{{ item }}"
+        path: "{{ golden_image_build_dir }}/{{ item }}"
         src: "/{{ item }}"
         fstype: none
         opts: bind
-        state: mounted
+        state: ephemeral
       loop:
         - proc
         - sys
         - dev
         - sys/fs/cgroup
-      changed_when: false # To satisfy molecule idempotence checks while also unmounting in the always block
-
-    - name: Add golden_image_chroot host to inventory
-      ansible.builtin.add_host:
-        name: golden_image_chroot
-        ansible_connection: chroot
-        ansible_host: /srv/nfs/ubuntu_golden
-        ssh_key_for_chroot: "{{ ssh_public_key }}"
-      changed_when: false
-
-# Play 3: Configure the golden image via chroot and cleanup
-- name: Configure golden image and cleanup
-  hosts: golden_image_chroot
-  become: true
-  vars:
-    roles_to_include:
-      - common/docker
-      - common/devtools
-      - common/vllm_source
-      - compute/networkd_wol
-      - compute/venv
-  vars_files:
-    - "vars/main.yml"
-    - "hardware_vars/{{ hardware_version }}.yml"
-  tasks:
-    - name: Configure chroot environment
-      block:
-        - name: Include chroot_config role
-          ansible.builtin.include_role:
-            name: compute/chroot_config
-        - name: Include hardware-agnostic golden image roles
-          ansible.builtin.include_role:
-            name: "{{ item }}"
-          loop: "{{ roles_to_include | default([]) }}"
-        - name: Include hardware-specific golden image roles
-          ansible.builtin.include_role:
-            name: "{{ item }}"
-          loop: "{{ hardware_golden_image_roles | default([]) }}"
-      always:
-        - name: Run chroot cleanup tasks on chroot
-          ansible.builtin.include_role:
-            name: compute/chroot_cleanup
-        - name: Run chroot cleanup tasks on localhost
-          become: true
-          block:
-            - name: Include chroot_connection_cleanup role on localhost
-              ansible.builtin.include_role:
-                name: control/chroot_connection_cleanup
