--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -4,6 +4,8 @@ control_node_ip: "{{ compute_subnet }}.1"
 golden_image_build_outer_dir: "{{ real_user_dir }}/build/{{ hardware_version }}"
 golden_image_build_dir: "{{ real_user_dir }}/build/{{ hardware_version }}/ubuntu_golden"
 golden_image_nfs_dir: "/srv/nfs/ubuntu_golden"
+# golden_image_build_outer_dir: "/srv/nfs/ubuntu_golden"
+# olden_image_build_dir: "/srv/nfs/ubuntu_golden"
 
 llama_cpp_git_hash: c7be9feb
 llama_cpp_rpc_port: 50052
