--- a/ansible/hardware_vars/0.2.yml
+++ b/ansible/hardware_vars/0.2.yml
@@ -1,15 +1,16 @@
 ---
 # Hardware v0.1 Configuration
 control_host: "control_0_2"
+build_host: "build_0_2"
 # Interface on the control node facing the compute nodes
-compute_interface: eth0 # TODO(antti) CHANGE THIS, neccessary to configure pxe and stuff correctly
+compute_interface: eth0 # TODO(antti) change this, neccessary to configure pxe and stuff correctly
 # Interface on the compute nodes facing the control node
 control_interface: eth0 # important for vllm stuff but not for initial boot
 arch: "amd64"
 debootstrap_arch: "amd64"
 rocm_arch: "gfx1151" # AFAIK this is correct for strix-halo
 
-compute_nodes: [] # << you shouldnt need entries here to boot, but
+compute_nodes: [] # << you shouldnt need entries here to boot, but need them to use ssh and wol commands
 
 llama_cpp_models: []
 llama_server_model: ""
