--- a/ansible/roles/compute/chroot_config/tasks/main.yml
+++ b/ansible/roles/compute/chroot_config/tasks/main.yml
@@ -14,14 +14,22 @@
     update_cache: true
     upgrade: dist
 
+# hitting apt rate limits here when i do this normally so shove some sleeps in there
+- name: Pause for 60 seconds to avoid apt rate limits
+  ansible.builtin.pause:
+    seconds: 60
+
 - name: Install base packages in chroot
   ansible.builtin.apt:
-    name:
-      - linux-image-generic
-      - openssh-server
-      - nfs-common
-      - overlayroot
+    name: "{{ item }}"
     state: present
+  loop:
+    - linux-image-generic
+    - openssh-server
+    - nfs-common
+    - overlayroot
+  loop_control:
+    pause: 30
 
 # User config
 - name: Ensure root .ssh directory exists in chroot
