--- a/ansible/roles/compute/chroot_config/tasks/main.yml
+++ b/ansible/roles/compute/chroot_config/tasks/main.yml
@@ -19,6 +19,7 @@
   ansible.builtin.apt:
     name:
       - linux-image-generic
+      - linux-firmware
       - openssh-server
       - nfs-common
       - overlayroot
@@ -72,6 +73,38 @@
     content: "compute-node"
     dest: /etc/hostname
     mode: "0644"
+
+- name: Add network drivers to initramfs modules
+  ansible.builtin.blockinfile:
+    path: /etc/initramfs-tools/modules
+    create: true
+    mode: "0644"
+    block: |
+      # USB Host Controllers (Required for USB Ethernet)
+      xhci_pci
+      xhci_hcd
+      ehci_pci
+
+      # USB Networking Stack
+      usbnet
+      cdc_ether
+      rndis_host
+
+      # Realtek USB (Framework / Dongles)
+      r8152
+      r8153_ecm
+
+      # Realtek PCIe (Standard Onboard)
+      r8169
+
+      # Intel / Broadcom / Mellanox (Common Server/Desktop NICs)
+      e1000e
+      igb
+      ixgbe
+      bnx2
+      bnx2x
+      mlx4_en
+      mlx5_core
 
 - name: Configure overlayroot
   ansible.builtin.copy:
