--- a/ansible/roles/hardware_specific/amd_llama_cpp_rpc_server/tasks/main.yml
+++ b/ansible/roles/hardware_specific/amd_llama_cpp_rpc_server/tasks/main.yml
@@ -4,6 +4,9 @@
     name:
       - cmake
       - libcurl4-openssl-dev
+      - libvulkan-dev
+      - glslang-tools
+      - glslc
     state: present
     update_cache: true
 
@@ -21,32 +24,16 @@
     state: directory
     mode: "0755"
 
-- name: Get HIPCXX path component
-  ansible.builtin.command: hipconfig -l
-  register: hipconfig_l
-  changed_when: false # This command doesn't change state
-
-- name: Get HIP_PATH
-  ansible.builtin.command: hipconfig -R
-  register: hipconfig_r
-  changed_when: false # This command doesn't change state
-
 - name: CMake Configure
   ansible.builtin.command:
-    cmd: cmake -S .. -DGGML_RPC=ON -DGGML_HIP=ON -DAMDGPU_TARGETS={{ rocm_arch }} -DCMAKE_BUILD_TYPE=Release
+    cmd: cmake -S .. -DGGML_VULKAN=ON -DCMAKE_BUILD_TYPE=Release
     chdir: "{{ llama_cpp_build_dir }}"
-  environment:
-    HIPCXX: "{{ hipconfig_l.stdout }}/clang"
-    HIP_PATH: "{{ hipconfig_r.stdout }}"
   changed_when: false # CMake handles idempotence internally, always want to run
 
 - name: CMake Build
   ansible.builtin.command:
     cmd: cmake --build . --config Release -- -j 16
     chdir: "{{ llama_cpp_build_dir }}"
-  environment:
-    HIPCXX: "{{ hipconfig_l.stdout }}/clang"
-    HIP_PATH: "{{ hipconfig_r.stdout }}"
   changed_when: false # CMake handles idempotence internally, always want to run
 
 - name: Create systemd unit file for llama.cpp RPC server
