--- a/ansible/hardware_vars/0.1.yml
+++ b/ansible/hardware_vars/0.1.yml
@@ -57,7 +57,7 @@ hardware_control_configure_roles:
   # - "hardware_specific/ray_head"
 
 hardware_golden_image_roles:
-  # - "hardware_specific/amd_radeon_drivers"
+  - "hardware_specific/amd_radeon_drivers"
   - "hardware_specific/amd_llama_cpp_rpc_server"
   # - "hardware_specific/amd_vllm_build"
   # - "hardware_specific/ray_worker"
